--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     },
     "dependencies": {
         "@vercel/speed-insights": "^1.0.12",
+        "axios": "^1.7.2",
+        "cheerio": "^1.0.0-rc.12",
+        "child_process": "^1.0.2",
+        "mongodb": "^6.7.0",
         "next": "14.2.4",
         "react": "^18",
         "react-dom": "^18"
