--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "axios": "^1.7.2",
         "cheerio": "^1.0.0-rc.12",
         "child_process": "^1.0.2",
+        "dotenv": "^16.4.5",
         "mongodb": "^6.7.0",
         "next": "14.2.4",
         "react": "^18",
