--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,8 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env
+.local
 
 # vercel
 .vercel
@@ -34,6 +35,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-#Secure enviroment
-.env
